SUBDIRS = libDysectAPI DysectAPI

nobase_include_HEADERS = DysectAPI/DysectAPIProcessMgr.h DysectAPI/ProcWait.h DysectAPI/Aggregates/Aggregate.h DysectAPI/Aggregates/AggregateFunction.h DysectAPI/Aggregates/Data.h DysectAPI/Aggregates/Packet.h DysectAPI/Aggregates/Location.h DysectAPI/Aggregates/StrAgg.h DysectAPI/Aggregates/RankListAgg.h DysectAPI/Aggregates/TimeListAgg.h DysectAPI/Aggregates/DescVar.h DysectAPI/Aggregates/CmpAgg.h DysectAPI/Aggregates/BucketAgg.h DysectAPI/Aggregates/RankBucketAgg.h DysectAPI/Aggregates/RankBitmap.h

